--- a/post/templates/post/snippets/post_list_body_2.html
+++ b/post/templates/post/snippets/post_list_body_2.html
@@ -4,32 +4,44 @@
 {% for result in results %}
     {% if result.likes %} <!-- IF A POST -->
     <div class="tweet-wrap infinite-item mb-1">
-      <article style="padding-right: 16px; padding-left: 16px; overflow: hidden; flex-direction: row; display: flex; font-size: 20px;">
-        <div>
+      <article style="padding-right: 18px; padding-left: 18px; overflow: hidden; flex-direction: row; display: flex; font-size: 20px;">
+        <div class="css-1dbjc4n r-1awozwy r-1hwvwag r-18kxxzh r-1b7u577">
           <a href="{% url 'account:view' user_id=result.author.profile.pk %}">
-              <img class="mr-3 circle-rounded avator" style="float: left;margin-right: 1rem;" width="50" height="50" src="{{ result.author.profile_image.url }}" />
+              <img class="mr-3 circle-rounded avator" style="float: left;margin-right: 1rem;" width="55" height="55" src="{{ result.author.profile_image.url }}" />
           </a>
         </div>
-        <div style="display: flex; flex-direction: column;">
+        <div class="css-1dbjc4n r-1iusvr4 r-16y2uox r-1777fci r-kzbkwu">
           <!-- User -->
-          <div style="margin-bottom: 2px; flex-direction: row;">
-            <div>
-              <a href="{% url 'account:view' user_id=result.author.profile.pk %}" style="text-decoration: none;">
-                <span style="color: black;"><strong>{{result.author.profile.fullname}}</strong>
-                  <span style="color:#657786;"> @{{ result.author }}</span>
-                </span>
-              </a>
-              <span style="color:#657786;"> {{ result.created_on|naturaltime }}</span>
+          <div class="css-1dbjc4n">
+            <div class="css-1dbjc4n r-zl2h9q">
+              <div class="css-1dbjc4n r-k4xj1c r-18u37iz r-1wtj0ep">
+                <div class="css-1dbjc4n r-1d09ksm r-18u37iz r-1wbh5a2">
+                  <div class="css-1dbjc4n r-1wbh5a2 r-dnmrzs">
+                    <a href="{% url 'account:view' user_id=result.author.profile.pk %}" 
+                    class="css-4rbku5 css-18t94o4 css-1dbjc4n r-1loqt21 r-1wbh5a2 r-dnmrzs r-1ny4l3l">
+                      <span style="color: black;"><strong>{{result.author.profile.fullname}}</strong>
+                        <span style="color:#657786;"> @{{ result.author }} </span>
+                      </span>
+                    </a>
+                  </div>
+                  
+                  <span style="color:#657786;"> {{ result.created_on|naturaltime }}</span>
+                </div>
+                <div class="css-1dbjc4n r-1joea0r">
+                  <!-- OPTIONS MARKER -->
+                </div>
+              </div>
             </div>
             <div></div>
           </div>
+
           <!-- Body -->
           <div style="position: relative;">
             <a href="{% url 'post:post-detail' result.pk %}" style="text-decoration: none;">
               <span style="position: absolute;width: 100%;height: 100%;top: 0;left: 0;z-index: 1;"></span> 
             </a>
             <p id="body-p-{{results.pk}}">{{ result.body|safe }}</p>
-
+            <!--
             {% if result.image.count > 0 %}
               <div class="row">
                 {% for img in result.image.all %}
@@ -38,7 +50,7 @@
                     </div>
                 {% endfor %}
               </div>
-            {% endif %}
+            {% endif %} -->
 
             {% if result.has_url %}
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js" integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ==" crossorigin="anonymous"></script>
@@ -119,37 +131,68 @@
             </script>
             {% endif %}
           </div>
+
+          {% if result.image.count == 2 %}
+            <div class="css-1dbjc4n">
+              <div class="css-1dbjc4n" style="margin-top: 12px; overflow: hidden; border-radius: 16px;">
+                <div class="css-1dbjc4n r-18u37iz r-1pi2tsx r-13qz1uu">
+                  <div class="css-1dbjc4n r-1iusvr4 r-16y2uox r-a5pmau r-bnwqim">
+                    <img src="{{ result.image.all.0.image.url }}" class="css-9pa8cd" />
+                  </div>
+                  <div class="css-1dbjc4n r-1iusvr4 r-16y2uox r-bnwqim">
+                    <img src="{{ result.image.all.1.image.url }}" class="css-9pa8cd" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          {% endif %}
+
           <!-- Count -->
-          <div style="display: flex; flex-direction: row; flex-shrink: 0; justify-content: space-between;">
-            <div style="display: flex;">
-              <div>
-                <svg class="feather feather-message-circle sc-dnqmqq jxshSx" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>
+          <div class="css-1dbjc4n">
+            <div class="css-1dbjc4n r-1ta3fxp r-18u37iz r-1wtj0ep r-1s2bzr4 r-1mdbhws">
+              <div class="css-1dbjc4n r-18u37iz r-1h0z5md">
+                <div class="css-18t94o4 css-1dbjc4n r-1777fci r-bt1l66 r-1ny4l3l r-bztko3 r-lrvibr">
+                  <div class="css-901oao r-1awozwy r-9ilb82 r-6koalj r-37j5jr r-a023e6 r-16dba41 r-1h0z5md r-rjixqe r-bcqeeo r-o7ynqc r-clp7b1 r-3s2u2q r-qvutc0">
+                    <div class="css-1dbjc4n r-xoduu5">
+                      <svg class="feather feather-message-circle sc-dnqmqq jxshSx r-4qtqp9 r-yyyyoo r-1xvli5t r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1hdv0qi" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>
+                    </div>
+                    <div class="css-1dbjc4n r-xoduu5 r-1udh08x">
+                      <span style="padding-right: 12px; padding-left: 12px;">{{result.comment_parent.count}}</span>
+                    </div>
+                  </div>
+                </div>
+                
               </div>
-              <div style="display: inline-flex;">
-                <span style="padding-right: 12px; padding-left: 12px;">{{result.comment_parent.count}}</span>
-              </div>
-            </div>
 
-            <div style="display: flex;">
-              <div>
-                <svg class="feather feather-repeat sc-dnqmqq jxshSx" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><polyline points="17 1 21 5 17 9"></polyline><path d="M3 11V9a4 4 0 0 1 4-4h14"></path><polyline points="7 23 3 19 7 15"></polyline><path d="M21 13v2a4 4 0 0 1-4 4H3"></path></svg>
+              <div class="css-1dbjc4n r-18u37iz r-1h0z5md">
+                <div class="css-18t94o4 css-1dbjc4n r-1777fci r-bt1l66 r-1ny4l3l r-bztko3 r-lrvibr">
+                  <div class="css-901oao r-1awozwy r-9ilb82 r-6koalj r-37j5jr r-a023e6 r-16dba41 r-1h0z5md r-rjixqe r-bcqeeo r-o7ynqc r-clp7b1 r-3s2u2q r-qvutc0">
+                    <div class="css-1dbjc4n r-xoduu5">
+                      <svg class="feather feather-repeat sc-dnqmqq jxshSx r-4qtqp9 r-yyyyoo r-1xvli5t r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1hdv0qi" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><polyline points="17 1 21 5 17 9"></polyline><path d="M3 11V9a4 4 0 0 1 4-4h14"></path><polyline points="7 23 3 19 7 15"></polyline><path d="M21 13v2a4 4 0 0 1-4 4H3"></path></svg>
+                    </div>
+                    <div class="css-1dbjc4n r-xoduu5 r-1udh08x">
+                      <span id="rt-count-{{result.pk}}" style="padding-right: 12px; padding-left: 12px;">0</span>
+                    </div>
+                  </div>
+                </div>
+                
               </div>
-              <div style="display: inline-flex;">
-                <span id="rt-count-{{result.pk}}" style="padding-right: 12px; padding-left: 12px;">0</span>
-              </div>
-            </div>
 
-            <div style="display: flex;">
-              <div>
-                <button class="btn btn-transparent p-0 " type="submit" onclick="sentAJAX_like({{result.pk}})">
-                    <span class="{% if request.user in result.likes.all %} heart-clicked {% else %} heart {% endif %}" id="like-button-{{result.pk}}"><i class='fas fa-heart'></i></span>
-                </button>
-              </div>
-              <div style="display: inline-flex;">
-                <span id="likes-count-{{result.pk}}" style="padding-right: 12px; padding-left: 12px;">{{ result.likes.all.count }}</span>
+              <div class="css-1dbjc4n r-18u37iz r-1h0z5md">
+                <div class="css-18t94o4 css-1dbjc4n r-1777fci r-bt1l66 r-1ny4l3l r-bztko3 r-lrvibr">
+                  <div class="css-901oao r-1awozwy r-9ilb82 r-6koalj r-37j5jr r-a023e6 r-16dba41 r-1h0z5md r-rjixqe r-bcqeeo r-o7ynqc r-clp7b1 r-3s2u2q r-qvutc0">
+                    <div class="css-1dbjc4n r-xoduu5">
+                      <button class="btn btn-transparent p-0 " type="submit" onclick="sentAJAX_like({{result.pk}})">
+                          <span class="{% if request.user in result.likes.all %} heart-clicked {% else %} heart {% endif %}" id="like-button-{{result.pk}}"><i class='fas fa-heart'></i></span>
+                      </button>
+                    </div>
+                    <div class="css-1dbjc4n r-xoduu5 r-1udh08x">
+                      <span id="likes-count-{{result.pk}}" style="padding-right: 12px; padding-left: 12px;">{{ result.likes.all.count }}</span>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
-        
           </div>
         </div>
         
