post with 2 3 4 img layout

--- a/post/templates/post/post_list_2.html
+++ b/post/templates/post/post_list_2.html
@@ -212,6 +212,74 @@
     .r-1udh08x{
         overflow: hidden;
     }
+    .r-1kqtdi0{
+        border-color: rgb(47, 51, 54);
+    }
+    .r-1867qdf{
+        border-radius: 16px;
+    }
+    .r-1phboty{
+        border-style: solid;
+    }
+    .r-rs99b7{
+        border-width: 1px;
+    }
+    .r-6416eg{
+        transition-property: background-color, box-shadow;
+    }
+    .r-1adg3ll{
+        display: block;
+    }
+    .r-1p0dtai{
+        bottom: 0px;
+    }
+    .r-1d2f490{
+        left: 0px;
+    }
+    .r-u8s1d{
+        position: absolute;
+    }
+    .r-ipm5af{
+        top: 0px;
+    }
+    .r-1mlwlqe{
+        flex-basis: auto;
+    }
+    .r-p1pxzi{
+        margin-bottom: 0px;
+    }
+    .r-11wrixw{
+        margin-left: 0px;
+    }
+    .r-61z16t{
+        margin-right: 0px;
+    }
+    .r-zchlnj{
+        right: 0px;
+    }
+    .r-417010{
+        z-index: 0;
+    }
+    .r-eqz5dr{
+        -moz-box-direction: normal;
+        -moz-box-orient: vertical;
+        flex-direction: column;
+    }
+    .r-1niwhzg{
+        background-color: rgba(0, 0, 0, 0);
+    }
+    .r-vvn4in{
+        background-position: center center;
+    }
+    .r-u6sd8q{
+        background-repeat: no-repeat;
+    }
+    .r-4gszlv{
+        background-size: cover;
+    }
+    .r-1wyyakw{
+        z-index: -1;
+    }
     .css-4rbku5 {
         background-color: rgba(0, 0, 0, 0);
         color: inherit;
