--- a/post/templates/post/snippets/post_list_body_2.html
+++ b/post/templates/post/snippets/post_list_body_2.html
@@ -7,7 +7,7 @@
       <article style="padding-right: 18px; padding-left: 18px; overflow: hidden; flex-direction: row; display: flex; font-size: 20px;">
         <div class="css-1dbjc4n r-1awozwy r-1hwvwag r-18kxxzh r-1b7u577">
           <a href="{% url 'account:view' user_id=result.author.profile.pk %}">
-              <img class="mr-3 circle-rounded avator" style="float: left;margin-right: 1rem;" width="55" height="55" src="{{ result.author.profile_image.url }}" />
+              <img class="mr-3 circle-rounded avator" style="float: left;margin-right: 1rem;" width="50" height="50" src="{{ result.author.profile_image.url }}" />
           </a>
         </div>
         <div class="css-1dbjc4n r-1iusvr4 r-16y2uox r-1777fci r-kzbkwu">
@@ -25,7 +25,7 @@
                     </a>
                   </div>
                   
-                  <span style="color:#657786;"> {{ result.created_on|naturaltime }}</span>
+                  <span style="color:#657786;">&nbsp;&nbsp; {{ result.created_on|naturaltime }}</span>
                 </div>
                 <div class="css-1dbjc4n r-1joea0r">
                   <!-- OPTIONS MARKER -->
@@ -131,7 +131,16 @@
             </script>
             {% endif %}
           </div>
-
+          {% if result.image.count == 1 %}
+            <div class="css-1dbjc4n">
+              <div class="css-1dbjc4n" style="margin-top: 12px; overflow: hidden; border-radius: 16px;">
+                <div class="css-1dbjc4n r-1kqtdi0 r-1867qdf r-1phboty r-rs99b7 r-1ny4l3l r-1udh08x r-o7ynqc r-6416eg">
+                  <img src="{{ result.image.all.0.image.url }}" class="css-9pa8cd" />
+                  
+                </div>
+              </div>
+            </div>
+          {% endif %}
           {% if result.image.count == 2 %}
             <div class="css-1dbjc4n">
               <div class="css-1dbjc4n" style="margin-top: 12px; overflow: hidden; border-radius: 16px;">
@@ -146,7 +155,99 @@
               </div>
             </div>
           {% endif %}
-
+          {% if result.image.count == 3 %}
+            <div class="css-1dbjc4n">
+              <div class="css-1dbjc4n" style="margin-top: 12px; overflow: hidden; border-radius: 16px;">
+                <div class="css-1dbjc4n r-18u37iz r-1pi2tsx r-13qz1uu">
+                  <!-- Left Part -->
+                  <div class="css-1dbjc4n r-1iusvr4 r-16y2uox r-a5pmau r-bnwqim">
+                    <img src="{{ result.image.all.0.image.url }}" class="css-9pa8cd" />
+                  </div>
+                  <!-- Right Part -->
+                  <div class="css-1dbjc4n r-1iusvr4 r-eqz5dr r-16y2uox">
+                    <div class="css-1dbjc4n r-1iusvr4 r-16y2uox r-zl2h9q r-bnwqim">
+                      <div class="css-1dbjc4n r-1p0dtai r-1d2f490 r-1udh08x r-u8s1d r-zchlnj r-ipm5af">
+                        <div class="css-1dbjc4n r-1p0dtai r-1mlwlqe r-1d2f490 r-p1pxzi r-11wrixw r-61z16t r-1udh08x r-u8s1d r-zchlnj r-ipm5af r-417010">
+                          <img src="{{ result.image.all.1.image.url }}" class="css-9pa8cd" />
+                        </div>
+                      </div>
+                    </div>
+                    <div class="css-1dbjc4n r-1iusvr4 r-16y2uox r-bnwqim">
+                     <div class="css-1dbjc4n r-1p0dtai r-1d2f490 r-1udh08x r-u8s1d r-zchlnj r-ipm5af">
+                        <div class="css-1dbjc4n r-1p0dtai r-1mlwlqe r-1d2f490 r-p1pxzi r-11wrixw r-61z16t r-1udh08x r-u8s1d r-zchlnj r-ipm5af r-417010">
+                          <img src="{{ result.image.all.2.image.url }}" class="css-9pa8cd" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          {% endif %}
+          {% if result.image.count == 4 %}
+          <div class="css-1dbjc4n">
+           <div aria-labelledby="id__rvxauwc65jg id__yvu8doqubr" class="css-1dbjc4n" id="id__2fl5t0jgzmb">
+              <div class="css-1dbjc4n r-1s2bzr4">
+                 <div class="css-1dbjc4n r-1kqtdi0 r-1867qdf r-1phboty r-rs99b7 r-1ny4l3l r-1udh08x r-o7ynqc r-6416eg">
+                    <div class="css-1dbjc4n">
+                       <div class="css-1dbjc4n r-1adg3ll r-1udh08x">
+                          <div class="r-1adg3ll r-13qz1uu" style="padding-bottom: 56.25%;"></div>
+                          <div class="r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-ipm5af r-13qz1uu">
+                             <div class="css-1dbjc4n r-18u37iz r-1pi2tsx r-13qz1uu">
+                                <div class="css-1dbjc4n r-1iusvr4 r-eqz5dr r-16y2uox r-a5pmau">
+                                   <div class="css-1dbjc4n r-1iusvr4 r-16y2uox r-zl2h9q r-bnwqim">
+                                      <a href="/AnfieldIndex/status/1472636130822696963/photo/1" role="link" class="css-4rbku5 css-18t94o4 css-1dbjc4n r-1loqt21 r-1pi2tsx r-1ny4l3l">
+                                         <div class="css-1dbjc4n r-1p0dtai r-1d2f490 r-1udh08x r-u8s1d r-zchlnj r-ipm5af" style="">
+                                            <div aria-label="Gambar" class="css-1dbjc4n r-1p0dtai r-1mlwlqe r-1d2f490 r-p1pxzi r-11wrixw r-61z16t r-1udh08x r-u8s1d r-zchlnj r-ipm5af r-417010" style="margin-top: 0px;" data-testid="tweetPhoto">
+                                               <div class="css-1dbjc4n r-1niwhzg r-vvn4in r-u6sd8q r-4gszlv r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-13qz1uu r-1wyyakw" style="background-image: url(&quot;{{ result.image.all.0.image.url }}&quot;);"></div>
+                                               <img alt="Gambar" draggable="true" src="{{ result.image.all.0.image.url }}" class="css-9pa8cd">
+                                            </div>
+                                         </div>
+                                      </a>
+                                   </div>
+                                   <div class="css-1dbjc4n r-1iusvr4 r-16y2uox r-bnwqim">
+                                      <a href="/AnfieldIndex/status/1472636130822696963/photo/3" role="link" class="css-4rbku5 css-18t94o4 css-1dbjc4n r-1loqt21 r-1pi2tsx r-1ny4l3l">
+                                         <div class="css-1dbjc4n r-1p0dtai r-1d2f490 r-1udh08x r-u8s1d r-zchlnj r-ipm5af" style="">
+                                            <div aria-label="Gambar" class="css-1dbjc4n r-1p0dtai r-1mlwlqe r-1d2f490 r-p1pxzi r-11wrixw r-61z16t r-1udh08x r-u8s1d r-zchlnj r-ipm5af r-417010" style="margin-top: 0px;" data-testid="tweetPhoto">
+                                               <div class="css-1dbjc4n r-1niwhzg r-vvn4in r-u6sd8q r-4gszlv r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-13qz1uu r-1wyyakw" style="background-image: url(&quot;{{ result.image.all.1.image.url }}&quot;);"></div>
+                                               <img alt="Gambar" draggable="true" src="{{ result.image.all.1.image.url }}" class="css-9pa8cd">
+                                            </div>
+                                         </div>
+                                      </a>
+                                   </div>
+                                </div>
+                                <div class="css-1dbjc4n r-1iusvr4 r-eqz5dr r-16y2uox">
+                                   <div class="css-1dbjc4n r-1iusvr4 r-16y2uox r-zl2h9q r-bnwqim">
+                                      <a href="/AnfieldIndex/status/1472636130822696963/photo/2" role="link" class="css-4rbku5 css-18t94o4 css-1dbjc4n r-1loqt21 r-1pi2tsx r-1ny4l3l">
+                                         <div class="css-1dbjc4n r-1p0dtai r-1d2f490 r-1udh08x r-u8s1d r-zchlnj r-ipm5af" style="">
+                                            <div aria-label="Gambar" class="css-1dbjc4n r-1p0dtai r-1mlwlqe r-1d2f490 r-p1pxzi r-11wrixw r-61z16t r-1udh08x r-u8s1d r-zchlnj r-ipm5af r-417010" style="margin-top: 0px;" data-testid="tweetPhoto">
+                                               <div class="css-1dbjc4n r-1niwhzg r-vvn4in r-u6sd8q r-4gszlv r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-13qz1uu r-1wyyakw" style="background-image: url(&quot;{{ result.image.all.2.image.url }}&quot;);"></div>
+                                               <img alt="Gambar" draggable="true" src="{{ result.image.all.2.image.url }}" class="css-9pa8cd">
+                                            </div>
+                                         </div>
+                                      </a>
+                                   </div>
+                                   <div class="css-1dbjc4n r-1iusvr4 r-16y2uox r-bnwqim">
+                                      <a href="/AnfieldIndex/status/1472636130822696963/photo/4" role="link" class="css-4rbku5 css-18t94o4 css-1dbjc4n r-1loqt21 r-1pi2tsx r-1ny4l3l">
+                                         <div class="css-1dbjc4n r-1p0dtai r-1d2f490 r-1udh08x r-u8s1d r-zchlnj r-ipm5af" style="">
+                                            <div aria-label="Gambar" class="css-1dbjc4n r-1p0dtai r-1mlwlqe r-1d2f490 r-p1pxzi r-11wrixw r-61z16t r-1udh08x r-u8s1d r-zchlnj r-ipm5af r-417010" style="margin-top: 0px;" data-testid="tweetPhoto">
+                                               <div class="css-1dbjc4n r-1niwhzg r-vvn4in r-u6sd8q r-4gszlv r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-13qz1uu r-1wyyakw" style="background-image: url(&quot;{{ result.image.all.3.image.url }}&quot;);"></div>
+                                               <img alt="Gambar" draggable="true" src="{{ result.image.all.3.image.url }}" class="css-9pa8cd">
+                                            </div>
+                                         </div>
+                                      </a>
+                                   </div>
+                                </div>
+                             </div>
+                          </div>
+                       </div>
+                    </div>
+                 </div>
+              </div>
+           </div>
+          </div>
+              
+          {% endif %}
           <!-- Count -->
           <div class="css-1dbjc4n">
             <div class="css-1dbjc4n r-1ta3fxp r-18u37iz r-1wtj0ep r-1s2bzr4 r-1mdbhws">
