dark mode and blog post layout

--- a/post/templates/post/post_list_2.html
+++ b/post/templates/post/post_list_2.html
@@ -42,284 +42,18 @@
       margin-right: 15px;
     }
 
-    /*From Twitter*/
-    .css-1dbjc4n{
-        -moz-box-direction: normal;
-        -moz-box-orient: vertical;
-        flex-basis: auto;
-        flex-direction: column;
-        flex-shrink: 0;
-        margin: 0px;
-        min-height: 0px;
-        min-width: 0px;
-        padding: 0px;
-        position: relative;
-        z-index: 0;
-        display: flex;
-        box-sizing: border-box;
-        border: 0px solid black;
-        -moz-box-align: stretch;
-        align-items: stretch;
-    }
-    .r-1iusvr4 {
-        flex-basis: 0px;
-    }
-    .r-16y2uox {
-        -moz-box-flex: 1;
-        flex-grow: 1;
-    }
-    .r-a5pmau {
-        margin-right: 2px;
-    }
-    .r-bnwqim {
-        position: relative;
-    }
-    .r-18u37iz {
-        -moz-box-direction: normal;
-        -moz-box-orient: horizontal;
-        flex-direction: row;
-    }
-    .r-1pi2tsx{
-        height: 100%;
-    }
-    .r-13qz1uu{
-        width: 100%;
-    }
-    .r-1777fci{
-        -moz-box-pack: center;
-        justify-content: center;
-    }
-    .r-kzbkwu{
-        padding-bottom: 12px;
-    }
-    .r-1awozwy{
-        -moz-box-align: center;
-        align-items: center;
-    }
-    .r-1hwvwag{
-        flex-basis: 48px;
-    }
-    .r-18kxxzh{
-        -moz-box-flex: 0;
-        flex-grow: 0;
-    }
-    .r-1b7u577{
-        margin-right: 12px;
-    }
-    .r-zl2h9q{
-        margin-bottom: 2px;
-    }
-    .r-k4xj1c {
-        -moz-box-align: start;
-        align-items: start;
-    }
-    .r-1wtj0ep {
-        -moz-box-pack: justify;
-        justify-content: space-between;
-    }
-    .r-1d09ksm {
-        -moz-box-align: baseline;
-        align-items: baseline;
-    }
-    .r-1wbh5a2 {
-        flex-shrink: 1;
-    }
-    .r-1joea0r {
-        margin-left: 20px;
-    }
-    .r-dnmrzs {
-        max-width: 100%;
-    }
-    .r-1ny4l3l {
-        outline-style: none;
-    }
-    .r-1loqt21 {
-        cursor: pointer;
-    }
-    .r-1ta3fxp {
-        column-gap: 8px;
-    }
-    .r-1s2bzr4 {
-        margin-top: 12px;
-    }
-    .r-1mdbhws {
-        max-width: 425px;
-    }
-    .r-1h0z5md{
-        -moz-box-pack: start;
-        justify-content: flex-start;
-    }
-    .r-bt1l66{
-        min-height: 20px;
-    }
-    .r-bztko3{
-        overflow: visible;
-    }
-    .r-9ilb82{
-        color: rgb(110, 118, 125);
-    }
-    .r-6koalj{
-        display: flex;
-    }
-    .r-37j5jr{
-        font-family: "TwitterChirp", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-    }
-    .r-a023e6{
-        font-size: 20px;
-    }
-    .r-16dba41{
-        font-weight: 400;
-    }
-    .r-rjixqe{
-        line-height: 20px;
-    }
-    .r-bcqeeo{
-        min-width: 0px;
-    }
-    .r-o7ynqc{
-        transition-duration: 0.2s;
-    }
-    .r-clp7b1{
-        transition-property: color;
-    }
-    .r-3s2u2q{
-        white-space: nowrap;
-    }
-    .r-qvutc0{
-        overflow-wrap: break-word;
-    }
-    .r-xoduu5{
-        display: inline-flex;
-    }
-    .r-4qtqp9{
-        display: inline-block;
-    }
-    .r-yyyyoo{
-        fill: currentcolor;
-    }
-    .r-1xvli5t{
-        height: 1.25em;
-    }
-    .r-1plcrui{
-        vertical-align: text-bottom;
-    }
-    .r-lrvibr{
-        user-select: none;
-    }
-    .r-1hdv0qi{
-        width: 1.25em;
-    }
-    .r-1udh08x{
-        overflow: hidden;
-    }
-    .r-1kqtdi0{
-        border-color: rgb(47, 51, 54);
-    }
-    .r-1867qdf{
-        border-radius: 16px;
-    }
-    .r-1phboty{
-        border-style: solid;
-    }
-    .r-rs99b7{
-        border-width: 1px;
-    }
-    .r-6416eg{
-        transition-property: background-color, box-shadow;
-    }
-    .r-1adg3ll{
-        display: block;
-    }
-    .r-1p0dtai{
-        bottom: 0px;
-    }
-    .r-1d2f490{
-        left: 0px;
-    }
-    .r-u8s1d{
-        position: absolute;
-    }
-    .r-ipm5af{
-        top: 0px;
-    }
-    .r-1mlwlqe{
-        flex-basis: auto;
-    }
-    .r-p1pxzi{
-        margin-bottom: 0px;
-    }
-    .r-11wrixw{
-        margin-left: 0px;
-    }
-    .r-61z16t{
-        margin-right: 0px;
-    }
-    .r-zchlnj{
-        right: 0px;
-    }
-    .r-417010{
-        z-index: 0;
-    }
-    .r-eqz5dr{
-        -moz-box-direction: normal;
-        -moz-box-orient: vertical;
-        flex-direction: column;
-    }
-    .r-1niwhzg{
-        background-color: rgba(0, 0, 0, 0);
-    }
-    .r-vvn4in{
-        background-position: center center;
-    }
-    .r-u6sd8q{
-        background-repeat: no-repeat;
-    }
-    .r-4gszlv{
-        background-size: cover;
-    }
-    .r-1wyyakw{
-        z-index: -1;
-    }
-    .css-4rbku5 {
-        background-color: rgba(0, 0, 0, 0);
-        color: inherit;
-        font: inherit;
-        list-style: none;
-        margin: 0px;
-        text-align: inherit;
-        text-decoration: none;
-    }
-    .css-18t94o4 {
-        cursor: pointer;
-    }
-    .css-9pa8cd{
-        inset: 0px;
-        height: 100%;
-        /*opacity: 0;
-        position: absolute;*/
-        width: 100%;
-        z-index: -1;
-    }
-    .css-901oao{
-        border: 0px solid black;
-        box-sizing: border-box;
-        font: 17px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-        margin: 0px;
-        padding: 0px;
-        white-space: pre-wrap;
-        overflow-wrap: break-word;
-    }
 
-    /*End Twitter*/
-
+    .post-name-color{
+        color: #fff;
+    }
     .tweet-wrap {
       /*background: #fff;*/
-      background: #fff;
+      background: #000;
       border-radius:10px;
       padding: 20px;
       border-bottom: 1px solid #e6ecf0;
       border-top: 1px solid #e6ecf0;
-      box-shadow: 0.8rem 0.8rem 1.4rem var(--greyLight-2), -0.2rem -0.2rem 1.8rem var(--white);
+      box-shadow: 0.1rem 0.1rem 0.4rem var(--greyLight-2), -0.1rem -0.1rem 1.2rem var(--white);
     }
 
     .tweet-header {
@@ -453,6 +187,7 @@
         }
     }
 </style>
+{% include 'snippets/css/twitter_style.html' %}
 {% endblock head %}
 
 {% block post %}
