--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
 	 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet"> 
 </head>
 
-<body>
+<body style="background: #000 !important;">
 
 	{% include 'snippets/base_css.html' %}
 	{% include 'snippets/base_js.html' %}
