--- a/templates/snippets/base_css.html
+++ b/templates/snippets/base_css.html
@@ -8,8 +8,8 @@
 		font-weight: 380;
 	}
 	body{
-		background-color: #f2f2f2;
-		font-family: 'Nunito', sans-serif;
+		background-color: #000;
+		font-family: "TwitterChirp", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 		font-weight: 380;
 	}
 
