--- a/templates/snippets/header_2.html
+++ b/templates/snippets/header_2.html
@@ -50,12 +50,12 @@
         margin-bottom: 20px;
     }
     .opt{
-        background: var(--primary-light) !important;
-        box-shadow: 0.8rem 0.8rem 1.4rem var(--greyLight-2), -0.2rem -0.2rem 1.8rem var(--white);
+        background: #000 !important;
+        box-shadow: 0.1rem 0.1rem 0.4rem var(--greyLight-2), -0.1rem -0.1rem 1.2rem var(--white);
     }
 </style>
 {% endblock head %}
-<div class="header opt ml-0 mr-0" style="width: 100%; background: var(--primary-light) !important; color: #000 !important; z-index: 99999;">    
+<div class="header opt ml-0 mr-0" style="width: 100%; background: #000 !important; color: #fff !important; z-index: 99999;">    
     <div class="header-content clearfix">
         <div class="header-left">
             <div class="input-group icons">
@@ -63,7 +63,7 @@
                     <span class="input-group-text bg-transparent border-0 pr-2 pr-sm-3" id="basic-addon1"><i class="mdi mdi-magnify" style="color: #000 !important;"></i></span>
                 </div>
                 <form class="search-bar justify-content-start" onsubmit="return executeQuery();">
-                    <input type="text" class="form-control" name="q" id="id_q_large" placeholder="Search..." aria-label="Search Dashboard" style="background: var(--primary-light) !important;">
+                    <input type="text" class="form-control" name="q" id="id_q_large" placeholder="Search..." aria-label="Search Dashboard" style="background-color: #fff !important; box-shadow: 0.1rem 0.1rem 0.4rem var(--greyLight-2), -0.1rem -0.1rem 1.2rem var(--white);">
                 </form>
                 <div class="drop-down   d-md-none">
 					<form action="#">
