--- a/post/templates/post/snippets/post_list_tweet_box.html
+++ b/post/templates/post/snippets/post_list_tweet_box.html
@@ -9,11 +9,11 @@
       background: #1da1f2;
     }
     .wrapper{
-      background: #fff;
+      background: #000;
       width: 100%;
       border-radius: 15px;
       padding: 25px 25px 15px 25px;
-      box-shadow: 0.8rem 0.8rem 1.4rem var(--greyLight-2), -0.2rem -0.2rem 1.8rem var(--white);
+      box-shadow: 0.1rem 0.1rem 0.4rem var(--greyLight-2), -0.1rem -0.1rem 1.2rem var(--white);
     }
     .input-box{
       padding-top: 10px;
