--- a/templates/snippets/css/sidebar.css
+++ b/templates/snippets/css/sidebar.css
@@ -23,14 +23,14 @@
     /* --------- */
 
     #accordian {
-        background: var(--primary-light);
+        background: #000;
         width: 100%;
         padding: 10px;
         float: left;
         height: 100vh;
         overflow-x: hidden;
         border-radius: 10px;
-        box-shadow: 0.8rem 0.8rem 1.4rem var(--greyLight-2), -0.2rem -0.2rem 1.8rem var(--white);
+        box-shadow: 0.1rem 0.1rem 0.4rem var(--greyLight-2), -0.1rem -0.1rem 1.2rem var(--white);
     }
 
 
@@ -50,7 +50,7 @@
     }
 
     #accordian ul li a{
-        color: #000;
+        color: #fff;
         text-decoration: none;
         font-size: 20px;
         display: block;
