--- a/templates/snippets/right-sidebar.html
+++ b/templates/snippets/right-sidebar.html
@@ -1,6 +1,7 @@
 {% load humanize %}
-
+{% include 'snippets/css/twitter_style.html' %}
 {% if type|stringformat:"s" == 'blog' %}
+<!--
 <div class="content-section">
   <div class="list-group">
     <li class="list-group-item active">Your Reading List</li>
@@ -121,4 +122,84 @@
     
 </div>
 
-{% endif %}
+{% endif %}-->
+
+<div class="css-1dbjc4n r-1ysxnx4 r-k0dy70 r-1867qdf r-1phboty r-rs99b7 r-1ifxtd0 r-1udh08x">
+   <div class="css-1dbjc4n">
+      <div class="css-1dbjc4n">
+         <section aria-labelledby="accessible-list-38" role="region" class="css-1dbjc4n">
+            <div aria-label="Timeline: Sedang populer" class="css-1dbjc4n">
+               <div class="css-1dbjc4n">
+                  <div class="css-1dbjc4n r-1adg3ll r-1ny4l3l">
+                     <div class="css-1dbjc4n">
+                        <div class="css-1dbjc4n r-1wtj0ep r-ymttw5 r-1f1sjgu">
+                           <h2 aria-level="2" role="heading" class="css-4rbku5 css-1dbjc4n r-18u37iz">
+                              <div class="css-1dbjc4n r-k200y r-z80fyv r-1777fci r-1bymd8e"></div>
+                              <div dir="auto" class="css-901oao css-cens5h r-1habvwh r-1fmj7o5 r-16y2uox r-1wbh5a2 r-37j5jr r-adyw6z r-1vr29t4 r-1pi2tsx r-1777fci r-135wba7 r-bcqeeo r-qvutc0" style="-webkit-line-clamp: 3;"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">Reading List</span></div>
+                              <!-- Not needed? -->
+                              <div class="css-1dbjc4n r-k200y r-z80fyv r-1777fci r-1bymd8e">
+                                 <a href="/settings/trends" aria-label="Pengaturan" role="link" class="css-4rbku5 css-18t94o4 css-1dbjc4n r-1niwhzg r-42olwf r-sdzlij r-1phboty r-rs99b7 r-1loqt21 r-kiymu5 r-2yi16 r-1qi8awa r-1ny4l3l r-o7ynqc r-6416eg r-lrvibr" data-testid="settingsAppBar">
+                                    <div dir="auto" class="css-901oao r-1awozwy r-6koalj r-18u37iz r-16y2uox r-37j5jr r-a023e6 r-b88u0q r-1777fci r-rjixqe r-bcqeeo r-q4m81j r-qvutc0" style="color: rgb(239, 243, 244);">
+                                       <svg viewBox="0 0 24 24" aria-hidden="true" class="r-4qtqp9 r-yyyyoo r-z80fyv r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-19wmn03" style="color: rgb(239, 243, 244);">
+                                          <g>
+                                             <path d="M12 8.21c-2.09 0-3.79 1.7-3.79 3.79s1.7 3.79 3.79 3.79 3.79-1.7 3.79-3.79-1.7-3.79-3.79-3.79zm0 6.08c-1.262 0-2.29-1.026-2.29-2.29S10.74 9.71 12 9.71s2.29 1.026 2.29 2.29-1.028 2.29-2.29 2.29z"></path>
+                                             <path d="M12.36 22.375h-.722c-1.183 0-2.154-.888-2.262-2.064l-.014-.147c-.025-.287-.207-.533-.472-.644-.286-.12-.582-.065-.798.115l-.116.097c-.868.725-2.253.663-3.06-.14l-.51-.51c-.836-.84-.896-2.154-.14-3.06l.098-.118c.186-.222.23-.523.122-.787-.11-.272-.358-.454-.646-.48l-.15-.014c-1.18-.107-2.067-1.08-2.067-2.262v-.722c0-1.183.888-2.154 2.064-2.262l.156-.014c.285-.025.53-.207.642-.473.11-.27.065-.573-.12-.795l-.094-.116c-.757-.908-.698-2.223.137-3.06l.512-.512c.804-.804 2.188-.865 3.06-.14l.116.098c.218.184.528.23.79.122.27-.112.452-.358.477-.643l.014-.153c.107-1.18 1.08-2.066 2.262-2.066h.722c1.183 0 2.154.888 2.262 2.064l.014.156c.025.285.206.53.472.64.277.117.58.062.794-.117l.12-.102c.867-.723 2.254-.662 3.06.14l.51.512c.836.838.896 2.153.14 3.06l-.1.118c-.188.22-.234.522-.123.788.112.27.36.45.646.478l.152.014c1.18.107 2.067 1.08 2.067 2.262v.723c0 1.183-.888 2.154-2.064 2.262l-.155.014c-.284.024-.53.205-.64.47-.113.272-.067.574.117.795l.1.12c.756.905.696 2.22-.14 3.06l-.51.51c-.807.804-2.19.864-3.06.14l-.115-.096c-.217-.183-.53-.23-.79-.122-.273.114-.455.36-.48.646l-.014.15c-.107 1.173-1.08 2.06-2.262 2.06zm-3.773-4.42c.3 0 .593.06.87.175.79.328 1.324 1.054 1.4 1.896l.014.147c.037.4.367.7.77.7h.722c.4 0 .73-.3.768-.7l.014-.148c.076-.842.61-1.567 1.392-1.892.793-.33 1.696-.182 2.333.35l.113.094c.178.148.366.18.493.18.206 0 .4-.08.546-.227l.51-.51c.284-.284.305-.73.048-1.038l-.1-.12c-.542-.65-.677-1.54-.352-2.323.326-.79 1.052-1.32 1.894-1.397l.155-.014c.397-.037.7-.367.7-.77v-.722c0-.4-.303-.73-.702-.768l-.152-.014c-.846-.078-1.57-.61-1.895-1.393-.326-.788-.19-1.678.353-2.327l.1-.118c.257-.31.236-.756-.048-1.04l-.51-.51c-.146-.147-.34-.227-.546-.227-.127 0-.315.032-.492.18l-.12.1c-.634.528-1.55.67-2.322.354-.788-.327-1.32-1.052-1.397-1.896l-.014-.155c-.035-.397-.365-.7-.767-.7h-.723c-.4 0-.73.303-.768.702l-.014.152c-.076.843-.608 1.568-1.39 1.893-.787.326-1.693.183-2.33-.35l-.118-.096c-.18-.15-.368-.18-.495-.18-.206 0-.4.08-.546.226l-.512.51c-.282.284-.303.73-.046 1.038l.1.118c.54.653.677 1.544.352 2.325-.327.788-1.052 1.32-1.895 1.397l-.156.014c-.397.037-.7.367-.7.77v.722c0 .4.303.73.702.768l.15.014c.848.078 1.573.612 1.897 1.396.325.786.19 1.675-.353 2.325l-.096.115c-.26.31-.238.756.046 1.04l.51.51c.146.147.34.227.546.227.127 0 .315-.03.492-.18l.116-.096c.406-.336.923-.524 1.453-.524z"></path>
+                                          </g>
+                                       </svg>
+                                       <span class="css-901oao css-16my406 css-bfa6kz r-poiln3 r-a023e6 r-rjixqe r-bcqeeo r-qvutc0" style="border-bottom: 2px solid rgb(239, 243, 244);"></span>
+                                    </div>
+                                 </a>
+                              </div>
+                              <!-- End not needed -->
+                           </h2>
+                        </div>
+                        {% for obj in readlist %}
+                        <div class="css-1dbjc4n r-1adg3ll r-1ny4l3l">
+                           <a href="{% url 'blog:blog-detail' obj.pk %}" rel="noopener noreferrer" target="_blank" role="link" class="css-4rbku5 css-18t94o4 css-1dbjc4n r-1loqt21 r-1ny4l3l r-1udh08x r-o7ynqc r-6416eg r-13qz1uu">
+                           <div tabindex="0" class="css-1dbjc4n r-1loqt21 r-6koalj r-1ny4l3l r-ymttw5 r-1f1sjgu r-o7ynqc r-6416eg hoverable" data-testid="trend" role="link">
+                              <div class="css-1dbjc4n r-16y2uox r-bnwqim">
+                                 <div class="css-1dbjc4n r-1d09ksm r-18u37iz r-1wbh5a2">
+                                    <div dir="auto" class="css-901oao r-9ilb82 r-37j5jr r-n6v787 r-16dba41 r-1cwl3u0 r-bcqeeo r-qvutc0"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">{{obj.author.profile.fullname}}</span></div>
+                                 </div>
+                                 <div dir="ltr" class="css-901oao r-1fmj7o5 r-37j5jr r-a023e6 r-b88u0q r-rjixqe r-bcqeeo r-vmopo1 r-qvutc0"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">{{obj.title}}</span></div>
+                                 <div dir="ltr" class="css-901oao r-9ilb82 r-37j5jr r-n6v787 r-16dba41 r-1cwl3u0 r-14gqq1x r-bcqeeo r-qvutc0" data-testid="metadata" hx-get="{% url 'blog:load-blog-span-sidebar' obj.pk %}" hx-trigger="load">
+                                  <span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">7.135 Tweet</span>
+                                 </div>
+                                 <div class="css-1dbjc4n r-u8s1d r-zchlnj r-1jy2w8o">
+                                    <div class="css-1dbjc4n r-18u37iz r-1h0z5md r-1joea0r">
+                                       <div aria-expanded="false" aria-haspopup="menu" aria-label="Selengkapnya" role="button" tabindex="0" class="css-18t94o4 css-1dbjc4n r-1777fci r-bt1l66 r-1ny4l3l r-bztko3 r-lrvibr" data-testid="caret">
+                                          <div dir="ltr" class="css-901oao r-1awozwy r-9ilb82 r-6koalj r-37j5jr r-a023e6 r-16dba41 r-1h0z5md r-rjixqe r-bcqeeo r-o7ynqc r-clp7b1 r-3s2u2q r-qvutc0">
+                                             <div class="css-1dbjc4n r-xoduu5">
+                                                <div class="css-1dbjc4n r-1niwhzg r-sdzlij r-1p0dtai r-xoduu5 r-1d2f490 r-xf4iuw r-1ny4l3l r-u8s1d r-zchlnj r-ipm5af r-o7ynqc r-6416eg"></div>
+                                                <svg viewBox="0 0 24 24" aria-hidden="true" class="r-4qtqp9 r-yyyyoo r-1xvli5t r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1hdv0qi">
+                                                   <g>
+                                                      <circle cx="5" cy="12" r="2"></circle>
+                                                      <circle cx="12" cy="12" r="2"></circle>
+                                                      <circle cx="19" cy="12" r="2"></circle>
+                                                   </g>
+                                                </svg>
+                                             </div>
+                                          </div>
+                                       </div>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                           </a>
+                        </div>
+                        {% endfor %}
+                        {% if readlist_count > 4 %}
+                        <div role="button" tabindex="0" class="css-18t94o4 css-1dbjc4n r-1pp923h r-1moyyf3 r-1ny4l3l r-ymttw5 r-1yzf0co r-o7ynqc r-6416eg">
+                           <a href="{% url 'blog:blog-readlist' %}" class="css-4rbku5 css-18t94o4 css-1dbjc4n r-1loqt21 r-1ny4l3l r-1udh08x r-o7ynqc r-6416eg r-13qz1uu">
+                           <div dir="auto" class="css-901oao r-o6sn0f r-37j5jr r-a023e6 r-16dba41 r-rjixqe r-bcqeeo r-qvutc0"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">Tampilkan lebih banyak  ({{readlist_count}})</span></div>
+                           </a>
+                        </div>
+                        {% endif %}
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+      </div>
+   </div>
+</div>
