--- a/templates/snippets/header_2.html
+++ b/templates/snippets/header_2.html
@@ -63,7 +63,7 @@
                     <span class="input-group-text bg-transparent border-0 pr-2 pr-sm-3" id="basic-addon1"><i class="mdi mdi-magnify" style="color: #000 !important;"></i></span>
                 </div>
                 <form class="search-bar justify-content-start" onsubmit="return executeQuery();">
-                    <input type="text" class="form-control" name="q" id="id_q_large" placeholder="Search..." aria-label="Search Dashboard" style="background-color: #fff !important; box-shadow: 0.1rem 0.1rem 0.4rem var(--greyLight-2), -0.1rem -0.1rem 1.2rem var(--white);">
+                    <input type="text" class="form-control" name="q" id="id_q_large" placeholder="Search..." aria-label="Search Dashboard" style="background-color: #000 !important; box-shadow: 0.1rem 0.1rem 0.4rem var(--greyLight-2), -0.1rem -0.1rem 1.2rem var(--white);">
                 </form>
                 <div class="drop-down   d-md-none">
 					<form action="#">
